# 3DG-pbr

./: .gitmodules  CMakeLists.txt
include/: camera.h  common.h  rasterizer.h  ray.h  raytracer.h  rng.h  splat_scene.h  splatloader.h  viewer.h
src/: main.cpp  rasterizer.cpp  raytracer.cpp  viewer.cpp
